# cipher3

./: .gitignore  app.py  frequency_analyser.py  pixi.toml  pyproject.toml  readme.md  requirements.txt
pages/: 1_Home.py  2_Frequency_Analyser.py  3_Caesar_Translator.py  4_Affine_Translator.py  5_Viginere_Translator.py  functions.py
