[project]
dependencies = []
description = "Add a short description here"
name = "cipher3"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cipher3 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
streamlit = ">=1.39.0,<2"
